# clab

./: .gitignore  Cargo.toml  Makefile
crates/clab/: Cargo.toml
crates/clab-core/: Cargo.toml
crates/clab-core/src/: architecture.rs  git.rs  lib.rs  scanner.rs  store.rs  types.rs  util.rs
crates/clab-daemon/: Cargo.toml
crates/clab-daemon/src/: lib.rs  mcp.rs  skills.rs
crates/clab/src/: main.rs
launchd/: dev.clab.plist
