[package]
name = "clab"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
clab-core = { path = "../clab-core" }
clab-daemon = { path = "../clab-daemon" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
